force-app/main/default/objects/copado__Deployment_Flow_Step__c/copado__Deployment_Flow_Step__c.object-meta.xml
<CustomObject>
    <label>Deployment Flow Step</label>
    <nameField>
        <displayFormat>DFS-{000000}</displayFormat>
        <label>Deployment Flow Step Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Flow Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>