force-app/main/default/objects/copado__Deployment_Flow_Step__c/fields/copado__Destination_Branch__c.field-meta.xml
<CustomField>
    <fullName>copado__Destination_Branch__c</fullName>
    <description>Value updated automatically by Copado. This is defined in the Deployment Flow Step of the Destination Environment.</description>
    <inlineHelpText>This is the Git branch linked to the destination environment. This Git branch is defined in another deployment flow step record where the current destination environment is the source environment.</inlineHelpText>
    <label>Destination Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>