force-app/main/default/objects/copado__Deployment_Flow_Step__c/fields/copado__Source_Environment__c.field-meta.xml
<CustomField>
    <fullName>copado__Source_Environment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Source Environment</label>
    <referenceTo>copado__Environment__c</referenceTo>
    <relationshipLabel>Deployment Flow Steps</relationshipLabel>
    <relationshipName>Deployment_Flow_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>